# erplag_compiler

./: CMakeLists.txt  ast_log.txt  code  code.asm  main.c  main2.c  parser_log.txt
compiler/: driver.c
compiler/code_generator/: code_generator.c  code_generator.h  old.txt
compiler/error_reporter/: error_report.c  error_report.h
compiler/lexer/constructor/: dfa_constructor.c  dfa_constructor.h  lexer_constructor.c  lexer_constructor.h
compiler/lexer/core/: lexer.c  lexer.h  token.c  token.h
compiler/lexer/dfa/: checkers.c  checkers.h  dfa.c  dfa.h
compiler/parser/core/ast/: ast.c  ast.h  ast_def.h  node_utility.c  node_utility.h
compiler/parser/core/ast/nodes/: array.c  array.h  array_variable.c  array_variable.h  assignment_statement.c  assignment_statement.h  binary_operator.c  binary_operator.h  boolean_literal.c  boolean_literal.h  case.c  case.h  declare_array_statement.c  declare_array_statement.h  declare_variable_statement.c  declare_variable_statement.h  for.c  for.h  get_val.c  get_val.h  id.c  id.h  integer_literal.c  integer_literal.h  module_declarations.c  module_declarations.h  module_node.c  module_node.h  module_use_statement.c  module_use_statement.h  modules_list_node.c  modules_list_node.h  print_statement.c  print_statement.h  program.c  program.h  real_literal.c  real_literal.h  statements.c  statements.h  (+10 more)
compiler/parser/core/interface/: parser.c  parser.h
compiler/parser/core/parse_table/: parse_table.c  parse_table.h
compiler/parser/core/parse_tree/: parse_tree.c  parse_tree.h
compiler/parser/grammar/: cfg.c  cfg.h
compiler/parser/grammar/first_follow/: action_utility.c  action_utility.h  first.c  first.h  follow.c  follow.h
compiler/parser/grammar/grammar_populator/: constructor.c  constructor.h  grammar_constants.c  grammar_constants.h
compiler/parser/grammar/test_grammar/: non_terminals.txt  productions.txt  terminals.txt
compiler/parser/grammar/test_grammar2/: productions.txt  terminals.txt
compiler/semantic_analyzer/: semantic_analyzer.c  semantic_analyzer.h
compiler/symbol_table/constructor/: symbol_table_constructor.c  symbol_table_constructor.h
compiler/symbol_table/interface/: symbol_table.c  symbol_table.h
datastructures/arraylist/: arraylist.c  arraylist.h
datastructures/hash/: hash.h
datastructures/hashmap/: hashmap.c  hashmap.h
datastructures/hashset/: hashset.c  hashset.h
datastructures/linkedlist/: linkedlist.c  linkedlist.h
datastructures/stack/: stack.c  stack.h
files/: commands.txt
files/grammar_files/: productions.txt
files/lexer_files/: accept_retract_other.txt  edges.txt  id_to_token_type.txt  state_to_error.txt  test2.erplag
files/mini_language_files/: keywords.txt  mini_accept_retract_other.txt  mini_edges.txt  mini_id_to_token_type.txt  mini_non_terminals.txt  mini_productions.txt  mini_terminals.txt  tokens.txt
files/output_files/: lexer_deets.txt  lexer_output.txt  parse_table.csv  parse_table.xlsx  parse_tree.txt  ~$parse_table.xlsx
files/output_files/stage1_testcases/t1/: comment_removed.txt  ideal_lexical_output.txt  lexer_output.txt
files/output_files/stage1_testcases/t2/: lexer_output.txt  parse_tree.txt
files/output_files/stage1_testcases/t3/: lexer_output.txt  parse_tree.txt
files/output_files/stage1_testcases/t4/: lexer_output.txt
files/output_files/stage1_testcases/t5/: lexer_output.txt  parse_tree.txt
files/output_files/stage1_testcases/t6/: lexer_output.txt  parse_tree.txt
files/prinouts/: lexer_printout.txt
files/testcases/Code_Generation_testcases/: c10.txt  c1d.txt  c2d.txt  c3d.txt  c6d.txt  c9d.txt
files/testcases/official_semantic_analysis/: t1.txt  t2.txt  t3.txt
files/testcases/official_stage1/: t1.txt
files/testcases/own/: basic_id.erplag  binary_search.erplag  binary_search_with_syntax_errors.erplag  bubble_sort.erplag  comment_mark_eof.erplag  isolate_while.txt  t11.erplag  t12.erplag  t13.erplag  t14.erplag  t15.erplag  t16.erplag  t17.erplag  t18.erplag  t4.erplag  t5.erplag  t6.erplag  t7.erplag  t7.txt  t8.txt  t9.txt
files/testcases/semanicAnalysis_testcases/: t1.txt  t10.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
files/testcases/test_ast/: t1.txt  t10.txt  t11.txt  t12.txt  t13.txt  t14.txt  t14x.txt  t15.txt  t16.txt  t17.txt  t18.txt  t19.txt  t2.txt  t20.txt  t21.txt  t22.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
files/testcases/test_code_gen/: t1.txt  t10.txt  t11.txt  t12.txt  t13.txt  t14.txt  t15.txt  t16.txt  t17.txt  t18.txt  t19.txt  t2.txt  t20.txt  t21.txt  t22.txt  t23.txt  t24.txt  t25.txt  t26.txt  t27.txt  t28.txt  t29.txt  t3.txt  t30.txt  t31.txt  t32.txt  t33.txt  t34.txt  t35.txt  t36.txt  t37.txt  t38.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
files/testcases/test_semantic_errors/: t1.txt  t10.txt  t11.txt  t12.txt  t13.txt  t14.txt  t15.txt  t16.txt  t17.txt  t18.txt  t19.txt  t2.txt  t21.txt  t22.txt  t23.txt  t24.txt  t25.txt  t26.txt  t27.txt  t28.txt  t29.txt  t3.txt  t30.txt  t31.txt  t32.txt  t33.txt  t34.txt  t35.txt  t36.txt  t37.txt  t38.txt  t39.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
files/testcases/test_symbol_table/: t1.txt  t10.txt  t11.txt  t12.txt  t13.txt  t14.txt  t15.txt  t16.txt  t17.txt  t18.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
utility/: comment_remover.c  comment_remover.h  errors.h  filehandler.c  filehandler.h  function_ptrs.h  int.c  int.h  string_def.c  string_def.h  utility.c  utility.h
